Add latency samples and metrics for gate9_taker_demo_http10 and gate9_taker_demo_http10_b
- Created latency_samples.csv for both demo runs with 516 entries each.
- Added metrics.json files for both demo runs, including detailed performance metrics such as fees, gross/net totals, Sharpe ratios, and latency statistics.
- Included fills.csv for gate9_taker_demo_http10_b with 10,774 entries detailing order execution data.

--- a/cpp_engine/CMakeLists.txt
+++ b/cpp_engine/CMakeLists.txt
@@ -93,9 +93,21 @@ add_executable(test_rules_normalization tests/test_rules_normalization.cpp)
 target_link_libraries(test_rules_normalization PRIVATE helix_engine)
 add_test(NAME test_rules_normalization COMMAND test_rules_normalization)
 
+add_executable(test_rules_rounding_direction tests/test_rules_rounding_direction.cpp)
+target_link_libraries(test_rules_rounding_direction PRIVATE helix_engine)
+add_test(NAME test_rules_rounding_direction COMMAND test_rules_rounding_direction)
+
 add_executable(test_fee_exactness_smoke tests/test_fee_exactness_smoke.cpp)
 target_link_libraries(test_fee_exactness_smoke PRIVATE helix_engine)
 add_test(NAME test_fee_exactness_smoke COMMAND test_fee_exactness_smoke)
+
+add_executable(test_fee_split tests/test_fee_split.cpp)
+target_link_libraries(test_fee_split PRIVATE helix_engine)
+add_test(NAME test_fee_split COMMAND test_fee_split)
+
+add_executable(test_adv_selection tests/test_adv_selection.cpp)
+target_link_libraries(test_adv_selection PRIVATE helix_engine)
+add_test(NAME test_adv_selection COMMAND test_adv_selection)
 
 add_executable(test_order_lifecycle tests/test_order_lifecycle.cpp)
 target_link_libraries(test_order_lifecycle PRIVATE helix_engine)
